--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+  <title>Happy new year</title>
 <h1>
-  HELLO WORLD!
+  Happy New Year !!!!
 </h1>
+<img src="https://www.shutterstock.com/image-vector/happy-2024-new-year-vector-260nw-2381674419.jpg"/>
 </html>
