--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <title>Happy new year</title>
+  <title>Happy New Year</title>
 <h1>
-  Happy New Year !!!!
+  Happy 2024 !!!!
 </h1>
 <img src="https://www.shutterstock.com/image-vector/happy-2024-new-year-vector-260nw-2381674419.jpg"/>
 </html>
