--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1>
   Happy New Year 2024 !!!!
   DevOps Team !!!
-  Welcome !!
+  Welcome to the Bootcamp !!
 </h1>
 <img src="https://www.shutterstock.com/image-vector/happy-2024-new-year-vector-260nw-2381674419.jpg"/>
 </html>
