--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>Happy New Year</title>
 <h1>
-  Happy New Year 2025
+  NO Happy New Year 2025
   DevOps Team !!!
   Welcome to the Bootcamp !!
 </h1>
